            Changes made in experimental branch 
      since split from Simbody 2.3 trunk on 8/16/2011
----------------------------------------------------------------------
8/16 Version changed to 3.0
8/16 Checked in FrictionConstraints doc
8/21 Rearchitected constraint API to support use of constraints
     as operators (BREAKING CHANGE TO CUSTOM CONSTRAINTS)
8/25 Fixed bug 1521 in SpeedCoupler constraint; backported to 2.3.
8/29 Fixed bug 1522 in memory-sharing Vector constructor; backported to 2.3.
8/29 Added calcBodyAccelerationFromUDot() method to matter subsystem.
8/29 Renamed getCoriolisAcceleration() to getMobilizerCoriolisAcceleration()
     and getCentrifugalForces() to getMobilizerCentrifugalForces()
     to make it clear that these are just mobilizer-incremental contributions.
     This is a BREAKING CHANGE if anyone ever called those, but probably if
     they did it was a mistake and they should have been calling 
     getTotalCoriolisAccleration() or getTotalCentrifugalForces() which are
     the meaningful physical quantities.
8/30 Added multiplyByG(), calcG() and related methods to matter subsystem.
9/XX Bug fixes to mesh-mesh elastic foundation code; backported to 2.2 & 2.3.
9/14 calcAcceleration operators are now really operators (no effect on state 
cache).
9/15 Added calcResidualForces() method equivalent to sdfulltrq(); inverse
dynamics with constraints.
9/18 Reworked pos & vel projection to use new operators; fixed pos projection
so that it produces a normal projection in q-space (was u-space before).
9/19 Fixed bug 1535 -- mobilizer reaction torque sometimes miscalculated.