@@ -858,6 +858,7 @@ when all mobilizers have 1 dof.
 void calcMInverseV(const State&,
     const Vector&        v,
     Vector&              MinvV) const;
+
 /** This operator explicitly calculates the n X n mass matrix M. Note that this
 is inherently an O(n^2) operation since the mass matrix has n^2 elements 
 (although only n(n+1)/2 are unique due to symmetry). <em>DO NOT USE THIS CALL 
@@ -1584,24 +1585,8 @@ void calcConstraintForcesFromMultipliers
    Vector_<SpatialVec>& bodyForcesInG,
    Vector&              mobilityForces) const;
 
-/** Calculate the mobilizer reaction force generated by each MobilizedBody.  
-This is the constraint force that would be required to make the system 
-move in the same way if that MobilizedBody were converted to a Free body.
-
-A simple way to think of the reaction force is to think of cutting the 
-mobilizer, then imagine the force required to make the system move in 
-the same manner as when the mobilizer was present. This is what the 
-reaction forces accomplish. With that definition, mobility forces (as 
-opposed to body forces) are \e included in the reactions. Some 
-conventions do not include the mobility forces in the definition of a 
-reaction force. We chose to include them since this preserves Newton's 
-3rd law of equal and opposite reactions between bodies. Ours is the same 
-convention as used in SD/FAST.
-
-A mobilizer exerts equal and opposite reaction forces on the parent 
-(inboard) and child (outboard) bodies. This method reports the force on 
-the child body, as though it were applied at the origin of the outboard 
-mobilizer frame M (fixed to the child), and expressed in the Ground frame.
+/** Calculate the mobilizer reaction force generated at each MobilizedBody,
+as felt at the mobilizer's outboard frame M, and expressed in Ground.
 
 @param[in] state        
     A State compatible with this System that has already been realized 
@@ -1612,11 +1597,72 @@ mobilizer frame M (fixed to the child), and expressed in the Ground frame.
     applied by each body's unique inboard mobilizer to that body. The
     force is returned as though it were applied at the origin of the 
     body's mobilizer frame M. The returned force is expressed in the
-    Ground frame. Note that applied mobility (generalized) forces are 
-    \e included in the returned reaction forces (see above).
+    Ground frame. Applied mobility (generalized) forces are \e included in the
+    returned reaction forces.
+
+A simple way to think of the reaction force is to think of cutting the 
+mobilizer, then imagine the force required to make the system move in 
+the same manner as when the mobilizer was present. This is what the 
+reaction forces accomplish. With that definition, mobility forces (that is,
+generalized forces as opposed to body forces) are \e included in the reactions.
+Some conventions do not include the mobility forces in the definition of a 
+reaction force. We chose to include them since this preserves Newton's 
+3rd law of equal and opposite reactions between bodies. Ours is the same 
+convention as used in SD/FAST.
+
+@note You can think of the Ground body being welded to the universe at the
+Ground origin. The reactions reported for Ground are the ones that would 
+occur in that Weld mobilizer if it were really present. That is, it includes
+the effects of all the base bodies on Ground.
+
+<h3>How to find the reaction felt by the parent body</h3>
+
+A mobilizer connects a frame F fixed on the parent (inboard) body P to a
+frame M fixed on the child (outboard) body B. It exerts equal and opposite 
+reaction forces on the two bodies, at a given location in space. This method 
+reports the force on the child body, as though it were applied at the origin 
+Mo of frame M, and expressed in the Ground frame. The force on the parent body
+<em>at Mo</em> is just the negative of the returned value. However, it is 
+more likely that you would want it as felt <em>at Fo</em>, the origin of the
+F frame on the parent. Here is one way to calculate that from the returned
+quantities:
+@code
+    matter.calcMobilizerReactionForces(state,forcesAtMInG); // This method.
+    const int nb = matter.getNumBodies();
+    Vector_<SpatialVec> forcesAtFInG(nb); // to hold the result
+    forcesAtFInG[0] = -forcesAtMInG[0]; // Ground is "welded" at origin
+    for (MobilizedBodyIndex i(1); i < nb; ++i) {
+        const MobilizedBody& body   = matter.getMobilizedBody(i);
+        const MobilizedBody& parent = body.getParentMobilizedBody();
+        // Want to shift reaction by p_MF, the vector from M to F across the
+        // mobilizer, and negate. Can get p_FM; must reexpress in G.
+        const Vec3& p_FM = body.getMobilizerTransform(state).p();
+        const Rotation& R_PF = body.getInboardFrame(state).R(); // In parent.
+        const Rotation& R_GP = parent.getBodyTransform(state).R();
+        Rotation R_GF   =   R_GP*R_PF;  // F frame orientation in Ground.
+        Vec3     p_MF_G = -(R_GF*p_FM); // Re-express and negate shift vector. 
+        forcesAtFInG[i] = -shiftForceBy(forcesAtMInG[i], p_MF_G);
+    }
+@endcode
+
+<h3>Implementation</h3>
+This method combines already-calculated quantities to calculate the reactions.
+See Abhi Jain's 2011 book "Robot and Multibody Dynamics", Eq. 7.34 page 128: 
+<pre>   F_reaction = P*(A-a) + z  </pre>
+where P is the articulated body inertia, A is the spatial acceleration,
+a the Coriolis acceleration and z the articulated body forces. After 
+calculating F_reaction at the body frame origin, we shift it to M for 
+reporting.
+
+<h3>Performance</h3>
+The cost of the above calculation is 105 flops/body. The code presented
+above for converting from M to F costs an additional 81 flops/body if you
+use it.
     
 @par Required stage
-  \c Stage::Acceleration **/
+  \c Stage::Acceleration 
+  
+@see calcMobilizerReactionForcesUsingFreebodyMethod() **/
 void calcMobilizerReactionForces
    (const State&         state, 
     Vector_<SpatialVec>& forcesAtMInG) const;
@@ -1836,6 +1882,45 @@ bool projectUConstraints(State& s, Real consAccuracy, const Vector& yWeights,
                          const Vector& ooTols, Vector& yErrest, System::ProjectOptions) const;
 
 /**@}**/
+
+
+
+//==============================================================================
+/** @name              Testing and debugging utilities
+
+Methods in this section provide alternate ways of calculating quantities for
+which we provide more efficient methods above. You should use the better 
+methods normally, but these can be very useful for regression testing and
+Simbody development because the answers are obtained differently. Numerical
+results should agree with the faster methods to within numerical precision. **/
+/**@{**/
+
+/** This is a slower alternative to calcMobilizerReactionForces(), for use in
+regression testing and Simbody development. This method builds a freebody
+"diagram" for each body in turn to determine the unknown reaction force at
+its inboard mobilizer.
+
+The given \a state must have been realized through Acceleration stage.
+
+<h3>Implementation</h3>
+We use a tip-to-base recursion in which we assemble all applied body forces
+from force elements, constraints, and gyroscopic effects and compare that with
+the apparent rigid body force determined from F=M*A where M is a body's 
+spatial inertia (in G) and A its already-calculated spatial acceleration. The 
+difference is the missing force applied by the body's mobilizer, i.e. the 
+reaction force. That is shifted to the M frame and reported. Then the equal
+and opposite reaction is applied to the parent body and included in its 
+collection of applied forces, which can be used to determine its reaction force
+and so on.
+
+This is is about 3X slower than the method used by 
+calcMobilizerReactionForces(). 
+@see calcMobilizerReactionForces() **/
+void calcMobilizerReactionForcesUsingFreebodyMethod
+   (const State&         state, 
+    Vector_<SpatialVec>& forcesAtMInG) const;
+/**@}**/
+
 
 
 //==============================================================================
